# ibet-Wallet-API

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .project  .python-version  CONTRIBUTING.md  CONTRIBUTING_ja.md  Dockerfile  ENV_LIST.md  LICENSE  Makefile  README.md  README_JA.md  alembic.ini  docker-compose.yml  hardhat.config.cjs  hardhat.config.js  healthcheck.sh  logger.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  qa.sh  qa_createdb.sql  requirements.txt  run  run.sh  run_Notifications.sh  run_Order_Agreement.sh  run_indexer.sh  run_migration.sh  server.py
.github/: auto_assign.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release.md
.github/workflows/: auto-assign.yml  build.yml  codeql-analysis.yml  pr.yml  test.yml
app/: __init__.py  config.py  database.py  errors.py  log.py  main.py  validator.py
app/api/: __init__.py
app/contracts/: __init__.py  abi.py  contract.py  contract_version.md
app/database/: __init__.py
app/middleware/: __init__.py  base.py  cache_control.py  cors.py  response_logger.py  session_manager.py  strip_trailing_slash.py  translator.py
app/model/: __init__.py  agreement.py  base.py  consume_coupon.py  contract.py  contract_modules.py  executable_contract.py  idx_agreement.py  idx_consume_coupon.py  idx_order.py  idx_position.py  idx_transfer_approval.py  issuer.py  listing.py  node.py  notification.py  omise_charge.py  order.py  portfolio.py  position.py  private_listing.py  push.py  stripe_account.py  stripe_charge.py  token.py  tokenTemplate.py  transfer.py
app/tests/: Dockerfile  account_config.py  conftest.py  contract_config.py  contract_modules.py  processor_Notifications_test.py  qa.sh  requirements.txt  v1_company_companyinfo_test.py  v1_company_paymentagentinfo_test.py  v1_company_test.py  v1_contracts_test.py  v1_eth_sendrawtransaction_test.py  v1_eth_transactioncount_test.py  v1_latestVersion_test.py  v1_marketInformation_test.py  v1_marketinformation_couponorderbook_test.py  v1_marketinformation_lastprice_test.py  v1_marketinformation_membershiporderbook_test.py  v1_marketinformation_orderbook_coupon_test.py  v1_marketinformation_orderbook_membership_test.py  v1_marketinformation_orderbook_straightbond_test.py  v1_marketinformation_orderbook_test.py  v1_marketinformation_tick_test.py  v1_nodeinfo_test.py  v1_notification_count_test.py  v1_notification_test.py  v1_omise_charge_test.py  v1_omise_chargestatus_test.py  v1_omise_createcustomer_test.py  v1_omise_updatecustomer_test.py  v1_orderlist_test.py  v1_position_couponconsumptions_test.py  v1_push_test.py  (+112 more)
async/: .#processor_Notifications.py  README.md  indexer_Consume_Coupon.py  indexer_DEX.py  indexer_OrderAgree.py  indexer_Position_Bond.py  indexer_Position_Coupon.py  indexer_Position_Membership.py  indexer_Position_Share.py  indexer_Transfer.py  log.py  processor_Block_Sync_Status.py  processor_Consume_coupon.py  processor_EventFilterOrder.py  processor_GetContractAddress.py  processor_Notifications.py  processor_Notifications_Bond_Exchange.py  processor_Notifications_Bond_Token.py  processor_Notifications_Coupon_Exchange.py  processor_Notifications_Coupon_Token.py  processor_Notifications_Membership_Exchange.py  processor_Notifications_PaymentGateway.py  processor_Notifications_Share_Exchange.py  processor_Notifications_Share_Token.py  processor_Notifications_bond.py  processor_Notifications_dr.py  processor_Notifications_mrf.py  processor_OrderAgree.py  processor_OrderAgree_Swap.py  processor_OrderBook.py  processor_Position.py
batch/: README.md  __init__.py  indexer_Block_Tx_Data.py  indexer_CompanyList.py  indexer_Company_List.py  indexer_Consume_Coupon.py  indexer_DEX.py  indexer_Position_Bond.py  indexer_Position_Coupon.py  indexer_Position_Membership.py  indexer_Position_Share.py  indexer_PublicInfo_PublicAccountList.py  indexer_PublicInfo_TokenList.py  indexer_Token_Detail.py  indexer_Token_Detail_ShortTerm.py  indexer_Token_Holders.py  indexer_Token_List.py  indexer_Token_List_Event.py  indexer_Transfer.py  indexer_TransferApproval.py  log.py  processor_Block_Sync_Status.py  processor_Notifications_Bond_Exchange.py  processor_Notifications_Bond_Token.py  processor_Notifications_Coupon_Exchange.py  processor_Notifications_Coupon_Token.py  processor_Notifications_Membership_Exchange.py  processor_Notifications_PaymentGateway.py  processor_Notifications_Share_Exchange.py  processor_Notifications_Share_Token.py  processor_Notifications_Token.py  processor_Send_Chat_Webhook.py  processor_Send_Mail.py
cmd/explorer/: Makefile  README.md  pyproject.toml
cmd/explorer/src/: main.py
cmd/explorer/src/connector/: __init__.py
cmd/explorer/src/gui/: consts.py  explorer.css  explorer.py
cmd/explorer/src/gui/rendarable/: tx_detail_info.py
cmd/explorer/src/gui/screen/: block.py  traceback.py  transaction.py
cmd/explorer/src/gui/widget/: base.py  block_detail_view.py  block_list_table.py  block_list_view.py  error.py  menu.py  query_panel.py  tx_detail_view.py  tx_list_table.py
cmd/explorer/src/utils/: time.py
conf/: dev.ini  live.ini  live_fin.ini  local.ini
data/: Android_latest_version.json  company_list.json  contracts.json  iOS_latest_version.json  payment_agent_list.json  zip_code_jigyosyo_version  zip_code_version
doc/: Dockerfile  README.md  requirements.txt  server.conf
docs/: generate_openapi_doc.py  ibet_wallet_api.yaml  ibet_wallet_api_v2.yaml  ibet_wallet_api_v3.yaml
migrations/: README.md  __init__.py  env.py  log.py  manage.py  migrate.cfg  script.py.mako
scripts/: updatePostalAddress.py  update_zipcode.py  update_zipcode_jigyosyo.py
sync/: processor_Notifications.py
tests/: Dockerfile  Dockerfile_hardhat  Dockerfile_unittest  account_config.py  conftest.py  contract_modules.py  qa.sh  qa_createdb.mysql.sql  qa_createdb.sql  requirements.txt  types.py
tmp/: MyCoin.sol  MyToken.sol  contract_call.py  contract_deploy.py  contract_deploy_raw.js  contract_deploy_raw.py  event_filter.py  package-lock.json  pk.js  replace.py
tools/: raw_transaction_sample.py
(+571 files in other folders)
