[tool.poetry]
name = "ibet-Wallet-API"
version = "24.6.0"
description = "RPC services that provides utility functions for building a wallet system on ibet-Network."
authors = ["BOOSTRY Co., Ltd. <dev@boostry.co.jp>"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = "3.12.2"
boto3 = "~1.34.59"
coincurve = "~19.0.1"
eth-keyfile = "0.8.0"
eth-utils = "~3.0.0"
fastapi = "~0.110.0"
gunicorn = "~22.0.0"
hexbytes = "~0.3.1"
orjson = "~3.9.15"
PyMySQL = {extras = ["rsa"], version = "~1.1.0"}
psycopg = {extras = ["c"], version = "^3.1.18"}
pydantic = {extras = ["email"], version = "~2.6.3"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
uvicorn = {extras = ["standard"], version = "~0.27.0"}
web3 = "~6.15.1"
tzdata = "^2024.1"
alembic = "^1.13.1"
aiomysql = "0.2.0"
httpx = "^0.27.0"

ibet-wallet-api-explorer = {path = "cmd/explorer", optional = true, develop = true}
textual = {version = "~0.44.1", optional = true}
async-cache = {version = "~1.1.1", optional = true}
typer = {version = "~0.7.0", optional = true}
aiohttp = {version = "~3.9.4", optional = true}
black = "24.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-order = "^1.2.1"
locustio = "0.9.0"
httpx = "^0.27.0"
black = "^24.3.0"
flake8 = "^6.1.0"
mypy = "^1.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pytest-alembic = "^0.10.7"
pytest-freezer = "^0.4.8"
textual-dev = "^1.2.1"
pytest-asyncio = "0.23.3"
pytest-aiohttp = "^1.0.5"
ruamel-yaml = "^0.18.6"

[tool.poetry.extras]
ibet-explorer = [
    "ibet-wallet-api-explorer",
    "textual",
    "async-cache",
    "typer",
    "aiohttp"
]

[tool.mypy]
plugins = [
  "sqlalchemy.ext.mypy.plugin"
]

[tool.isort]
profile = "black"
combine_as_imports = true
skip_glob = ["migrations/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"