[tool.poetry]
name = "ibet-Wallet-API"
version = "24.9.0"
description = "RPC services that provides utility functions for building a wallet system on ibet-Network."
authors = ["BOOSTRY Co., Ltd. <dev@boostry.co.jp>"]
license = "Apache License, Version 2.0"

[tool.poetry.dependencies]
python = "3.12.2"
boto3 = "~1.34.59"
coincurve = "~19.0.1"
eth-keyfile = "0.8.1"
eth-utils = "~4.1.1"
fastapi = "~0.111.0"
gunicorn = "~22.0.0"
hexbytes = "~1.2.0"
orjson = "~3.10.3"
PyMySQL = {extras = ["rsa"], version = "~1.1.0"}
psycopg = {extras = ["c"], version = "^3.1.18"}
pydantic = {extras = ["email"], version = "~2.7.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
uvicorn = {extras = ["standard"], version = "~0.30.0"}
web3 = "7.0.0b6"
tzdata = "^2024.1"
alembic = "^1.13.1"
aiomysql = "0.2.0"
httpx = "^0.27.0"
memray = "^1.12.0"

ibet-wallet-api-explorer = {path = "cmd/explorer", optional = true, develop = true}
textual = {version = "~0.44.1", optional = true}
async-cache = {version = "~1.1.1", optional = true}
typer = {version = "~0.12.3", optional = true}
aiohttp = {version = "~3.9.4", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-order = "^1.2.1"
locustio = "0.9.0"
ruff = "^0.5.4"
pre-commit = "^3.6.0"
pytest-alembic = "^0.10.7"
pytest-freezer = "^0.4.8"
textual-dev = "^1.2.1"
pytest-asyncio = "0.23.3"
pytest-aiohttp = "^1.0.5"
ruamel-yaml = "^0.18.6"
pytest-memray = "^1.6.0"

[tool.poetry.extras]
ibet-explorer = [
    "ibet-wallet-api-explorer",
    "textual",
    "async-cache",
    "typer",
    "aiohttp"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
# E: pycodestyle
# F: Pyflakes
select = ["E", "F"]
# UP042: Checks for classes that inherit from both str and enum.Enum
extend-select = ["UP042"]
# E711: Comparison to `None` should be `cond is None`
# E712: Avoid equality comparisons to False
# E721: Use is and is not for type comparisons, or isinstance() for isinstance checks
# E722: Do not use bare except
# E402: Module level import not at top of file
# E731: Do not assign a lambda expression, use a def
# E501: Line too long (trust formatter)
ignore = ["E402", "E711", "E712", "E721", "E722", "E731", "E501"]
exclude = ["migrations/*"]

[tool.ruff.lint.extend-per-file-ignores]
# F401 [*] xxx imported but unused
# F403 from .main import * used; unable to detect undefined names
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"