[project]
name = "ibet-Wallet-API"
version = "25.12"
description = "RPC services that provides utility functions for building a wallet system on ibet-Network."
authors = [{ name = "BOOSTRY Co., Ltd.", email = "dev@boostry.co.jp" }]
license = { text = "Apache License, Version 2.0" }
requires-python = "==3.13.11"
dependencies = [
    "boto3~=1.42.18",
    "coincurve~=21.0.0",
    "eth-keyfile~=0.9.1",
    "eth-utils~=5.2.0",
    "fastapi~=0.124.4",
    "gunicorn~=23.0.0",
    "hexbytes~=1.3.0",
    "orjson~=3.10.3",
    "PyMySQL[rsa]~=1.1.0",
    "psycopg[c]<4.0.0,>=3.2.0",
    "pydantic[email]~=2.10.3",
    "sqlalchemy[asyncio]<3.0.0,>=2.0.33",
    "uvicorn[standard]~=0.34.0",
    "web3==7.5.0",
    "tzdata<2026.0,>=2025.1",
    "alembic<2.0.0,>=1.14.0",
    "aiomysql==0.3.2",
    "httpx~=0.28.0",
    "memray<2.0.0,>=1.14.0",
    "py-spy>=0.4.0",
    "asyncpg~=0.30.0",
    "pyroscope-io>=0.8.11",
    "pyroscope-otel>=0.4.1",
    "opentelemetry-sdk>=1.33.0",
    "opentelemetry-instrumentation-fastapi>=0.54b0,<1.0.0",
    "opentelemetry-instrumentation-asyncio>=0.54b0,<1.0.0",
    "opentelemetry-instrumentation-asyncpg>=0.54b0,<1.0.0",
    "opentelemetry-instrumentation-httpx>=0.54b0,<1.0.0",
    "opentelemetry-instrumentation-pika>=0.54b0,<1.0.0",
    "opentelemetry-instrumentation-psycopg>=0.54b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.54b0,<1.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.33.1,<2.0.0",
    "requests>=2.32.3",
    "python-dotenv~=1.2.1",
    "cryptography>=45.0.3",
]

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.2",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-order<2.0.0,>=1.2.1",
    "locustio==0.9.0",
    "ruff<1.0.0,>=0.5.4",
    "pre-commit>=3.6.0,<5.0.0",
    "pytest-alembic<1.0.0,>=0.10.7",
    "pytest-freezer<1.0.0,>=0.4.8",
    "textual-dev<2.0.0,>=1.2.1",
    "pytest-asyncio==1.3.0",
    "pytest-aiohttp<2.0.0,>=1.0.5",
    "ruamel-yaml<1.0.0,>=0.18.6",
    "pytest-memray<2.0.0,>=1.6.0",
    "pyright>=1.1.407",
]

[project.optional-dependencies]
ibet-explorer = [
    "ibet-wallet-api-explorer",
    "textual~=0.44.1",
    "async-cache~=1.1.1",
    "typer~=0.12.3",
    "aiohttp~=3.12.13",
    "async-cache==1.1.1",
]

[tool.uv.sources]
ibet-wallet-api-explorer = { path = "cmd/explorer", editable = true }

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [".venv/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
# E: pycodestyle
# F: Pyflakes
select = ["E", "F"]
# UP042: Checks for classes that inherit from both str and enum.Enum
extend-select = ["UP042"]
# E711: Comparison to `None` should be `cond is None`
# E712: Avoid equality comparisons to False
# E721: Use is and is not for type comparisons, or isinstance() for isinstance checks
# E722: Do not use bare except
# E402: Module level import not at top of file
# E731: Do not assign a lambda expression, use a def
# E501: Line too long (trust formatter)
ignore = ["E402", "E711", "E712", "E721", "E722", "E731", "E501"]
exclude = ["migrations/*", ".venv/*", "cov/*"]

[tool.ruff.lint.extend-per-file-ignores]
# F401 [*] xxx imported but unused
# F403 from .main import * used; unable to detect undefined names
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-m 'not alembic'"
markers = ["alembic: tests for alembic"]
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
branch = true
concurrency = ["thread", "greenlet"]
include = [
    "app/api/**/*",
    "app/model/**/*",
    "app/utils/**/*",
    "batch/**/*",
    "cmd/**/*",
]
