[tool.poetry]
name = "ibet-wallet-api-explorer"
version = "0.1.0"
description = "ibet-Wallet-API Terminal UI for Block Chain Explorer"
authors = ["BOOSTRY Co., Ltd. <dev@boostry.co.jp>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.10.1"
async-cache = "^1.1.1"
typer = "^0.7.0"
aiohttp = "^3.8.4"
fastapi = "^0.91.0"
web3 = "^5.31.3"
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
pydantic = {extras = ["email"], version = "^1.10.4"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
ibet-explorer = "src.main:app"

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.black]
includes = "src"
target-version = ['py310']
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"