[project]
name = "ibet-wallet-api-explorer"
version = "0.1.0"
description = "ibet-Wallet-API Terminal UI for Block Chain Explorer"
authors = [
    {name = "BOOSTRY Co., Ltd.", email = "dev@boostry.co.jp"},
]
readme = "README.md"
requires-python = "==3.12.2"
dependencies = []

[project.scripts]
ibet-explorer = "main:app"

[tool.mypy]
python_version = "3.12"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["src/"]
include = ["*"]